--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -1,60 +1,77 @@
-
-
-*, *::before, *::after {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: Gotham Rounded, sans-serif;
-  font-weight: normal;
+  font-family: "Roboto Mono", monospace;
 }
 
 body {
-  padding: 0;
-  margin: 0;
-  background: linear-gradient(to right, #00AAFF, #00FF6C);
+  height: 100vh;
+  background: linear-gradient(to bottom, #F9544c 50%, #090C31 50%);
 }
 
-.calculator-grid {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  min-height: 100vh;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+
+.calculator {
+  width: 400px;
+  background-color: #15173C;
+  padding: 50px 30px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 8px;
+  box-shadow: 0 20px 50px rgba(0, 5, 24, 0.4);
 }
 
-.calculator-grid > button {
-  cursor: pointer;
-  font-size: 2rem;
-  border: 1px solid white;
-  outline: none;
-  background-color: rgba(255, 255, 255, .75);
-}
-
-.calculator-grid > button:hover {
-  background-color: rgba(255, 255, 255, .9);
-}
-
-.span-two {
-  grid-column: span 2;
-}
-
-.output {
-  grid-column: 1 / -1;
-  background-color: rgba(0, 0, 0, .75);
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
-  flex-direction: column;
-  padding: 10px;
+.display {
+  width: 100%;
+  min-height: minmax(75px, auto);
   word-wrap: break-word;
   word-break: break-all;
 }
 
-.output .previous-operand {
-  color: rgba(255, 255, 255, .75);
-  font-size: 1.5rem;
-}
-
-.output .current-operand {
+.display input {
+  width: 100%;
+  padding: 15px 10px;
+  text-align: right;
+  border: none;
+  background-color: transparent;
   color: white;
   font-size: 2.5rem;
+}
+
+.display input::placeholder {
+  color: #9490AC;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.buttons input[type='button'] {
+  font-size: 20px;
+  padding: 17px;
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1.7rem;
+}
+
+.buttons input[type='button']:hover {
+  box-shadow: 0 8px 23px #000D2E;
+}
+
+input[type='button']#equal {
+  grid-row: span 2;
+  background-color: #F9544c;
+}
+
+input[type="button"][value="0"] {
+  grid-column: span 2;
+  background-color: #F9544c;
 }
