--- a/Recipe-App/styles.css
+++ b/Recipe-App/styles.css
@@ -60,9 +60,32 @@ header button{
 }
 
 .fav-meals li{
+    position: relative;
     margin: 0.3rem;
-
+    cursor: pointer;
 }
+
+.fav-meals li .clear{
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 2px;
+    border: 1px solid grey;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.fav-meals li span{
+    display: inline-block;
+    font-size: 0.9rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100px;
+}
+
+
 
 .fav-meals li img{
     width: 100px;
@@ -118,5 +141,49 @@ header button{
 
 .meal-body .fav-button.active{
     color: rgb(228, 28, 138);
+}
+
+.meal-info-container{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: (0,0,0, 0.5);
+   
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.meal-info-container.hidden{ 
+    opacity: 0;
+    pointer-events: none;
+}
+
+.meal-container{
+    position: relative;
+    background-color: white;
+    max-width: 500px;
+    border-radius: 5px;
+    padding: 1rem 1.5rem;
+    width: 100%;
+    height: 100vh;
+    margin: 1.5rem;
+    overflow: auto;
+}
+
+.meal-container h1{
+    text-align: center;
+}
+
+.meal-container .close-popup{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
  
